--------------------------------------------------------------------------------------------------
Release notes version 1.8.3_beta : Enhancements, modifications and corrected bugs since version 1.8.2 :
--------------------------------------------------------------------------------------------------
17/05/21 (TrioCFD) New feature : k-epsilon Bicephale model : New decoupled management of the evolution equations of k and epsilon for the Bas-Reynolds models - WARNING model under validation
31/03/21 (TrioCFD) New feature : triocfd -baltik BALTIK_NAME creates an empty baltik that depends on TrioCFD.
31/03/21 (TrioCFD) New feature : triocfd -xcheck allows now to check the syntaxe of triocfd datafiles using XDATA.
31/03/21 (TrioCFD) New feature : Add possibility to post-process k-eps diffusive and convective terms in definition_champs block
17/03/21 (TrioCFD) New feature : Add possibility to post-process k-eps source terms in definition_champs block with "operateur_eqn { numero_source 0 sources { refChamp { pb_champ pb K_EPS } }"
03/03/21 (TrioCFD) Doc         : Update of models description (Phase Field, ALE and Sensitivity Analysis)
05/02/21 (TrioCFD) New keyword : Boundary_field_keps_from_ud to specify a K-Eps inlet field with hydraulic diameter, speed, and turbulence intensity (VDF only)
27/01/21 (TrioCFD) Major change: Restructuration - Rayonnement contains now Rayonnement (milieu transparent) + Rayonnement_semi_transparent
27/01/21 (TrioCFD) Major change: Restructuration - Turbulence contains now LES validation sheets and Bas_Reynolds
15/01/21 (TrioCFD) New feature : New documentation available: development plan and models description
--------------------------------------------------------------------------------------------------
Release notes version 1.8.2 : Enhancements, modifications and corrected bugs since version 1.8.1 :
--------------------------------------------------------------------------------------------------